--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "final project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha './tests/**.test.js'",
+    "test": "mocha './tests/**.test.js'",   
     "test:debug": "NODE_DEBUG=request npm run test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
@@ -24,6 +24,7 @@
     "slow": 5000
   },
   "dependencies": {
+    "ajv": "^6.12.1",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
@@ -32,7 +33,7 @@
     "faker": "^5.5.3",
     "mocha": "^9.1.0",
     "moment": "^2.29.1",
-    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
 }
